--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <header>
       <div class="name">Erick Heidan</div>
       <div class="role">Data Analyst • São Paulo, Brasil</div>
-      <p class="lead">Bacharel em Ciências Sociais (FESPSP) com experiência em Análise de Dados/BI, construção de dashboards, automação de processos e monitoramento de KPIs. Atualmente Data Analyst na MATH Group.</p>
+      <p class="lead">Bacharel em Ciências Sociais (FESPSP) com experiência em análise de dados/BI, construção de dashboards, automação de processos e monitoramento de KPIs. Atualmente Data Analyst na MATH Group.</p>
 
       <nav aria-label="Navegação">
         <a href="#sobre">Sobre</a>
@@ -151,15 +151,7 @@
       </div>
     </header>
 
-    <main>
-      <section id="sobre">
-        <h2>Sobre</h2>
-        <div class="card">
-          <p>Escreva um breve parágrafo sobre você: anos de experiência, áreas principais, tecnologias/ferramentas (se for de tech) ou competências (se for de negócios), idiomas e resultados notáveis.</p>
-        </div>
-      </section>
-
-      
+         
 <section id="experiencia">
   <h2>Experiência</h2>
   <div class="experience">
@@ -209,22 +201,6 @@
         <li>Automação de processos e bots internos.</li>
       </ul>
     </article>
-
-    <article class="job card">
-      <h3>Analista de CX — Revelo</h3>
-      <div class="meta">Ago 2019 — Out 2020 • São Paulo, BR</div>
-      <ul>
-        <li>Estudos e análises de dados de experiência do cliente.</li>
-      </ul>
-    </article>
-
-    <article class="job card">
-      <h3>Assistente Administrativo — Estúdio Papel</h3>
-      <div class="meta">Ago 2017 — Jul 2019 • São Paulo, BR</div>
-      <ul>
-        <li>Atividades administrativas e suporte operacional.</li>
-      </ul>
-    </article>
   </div>
 </section>
 
@@ -233,8 +209,8 @@
 <section id="habilidades">
   <h2>Habilidades</h2>
   <div class="card skills">
-    <span class="pill">Microsoft Power BI</span>
     <span class="pill">SQL</span>
+    <span class="pill">Microsoft Power BI</span>
     <span class="pill">ETL</span>
     <span class="pill">Análise de Dados</span>
     <span class="pill">Automação de Processos</span>
@@ -250,7 +226,6 @@
     <p><strong>Especialização em Data Analytics</strong> — Preditiva Analytics (2021)</p>
     <p><strong>Curso Livre Banco de Dados</strong> — Let's Code Academy (2020)</p>
     <p><strong>Bacharelado em Ciências Sociais</strong> — FESPSP (2015–2018)</p>
-    <p><strong>Bacharelado em Administração</strong> — UNINOVE (2009–2012)</p>
   </div>
 </section>
 
@@ -259,7 +234,7 @@
         <h2>Contato</h2>
         <div class="card">
           <p>Email: <a href="mailto:erickheidan@gmail.com">erickheidan@gmail.com</a></p>
-          <p>LinkedIn: <a href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">linkedin.com/in/seu-usuario</a></p>
+          <p>LinkedIn: <a href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">linkedin.com/in/erickheidan</a></p>
           <p>GitHub: <a href="https://github.com/erickheidan" target="_blank" rel="noopener">github.com/seuusuario</a></p>
         </div>
       </section>
@@ -276,8 +251,8 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Erick Heidan",
-    "jobTitle": "Sua Profissão",
-    "url": "https://seuusuario.github.io",
+    "jobTitle": "Data Analyst",
+    "url": "https://erickheidan.github.io",
     "email": "mailto:erickheidan@gmail.com",
     "sameAs": [
       "https://www.linkedin.com/in/erickheidan",
