--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <header>
       <div class="name"> Erick Heidan</div>
       <div class="role"> Data Analyst • São Paulo, Brasil</div>
-      <p class="lead"> Bacharel em Ciências Sociais (FESPSP) com experiência em análise de dados/BI, construção de dashboards, automação de processos e monitoramento de KPIs. Atualmente Data Analyst na MATH Group.</p>
+      <p class="lead"> Data Analyst com sólida experiência em Business Intelligence, automação de processos e criação de dashboards estratégicos. Bacharel em Ciências Sociais pela FESPSP, atuo na transformação de dados em insights que apoiam decisões de negócio.</p>
 
       <nav aria-label="Navegação">
         <a href="#experiencia">Experiência</a>
@@ -144,11 +144,23 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="mailto:erickheidan@gmail.com" aria-label="Enviar email">✉️ Email</a>
-        <a class="btn" href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">LinkedIn</a>
-        <a class="btn" href="#" target="_blank" rel="noopener">Baixar CV (PDF)</a>
-      </div>
-    </header>
+    <a class="btn primary" href="mailto:erickheidan@gmail.com" aria-label="Enviar email">✉️ Email</a>
+    <a class="btn" href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener" aria-label="LinkedIn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 
+                 1.146v13.708c0 .633-.526 1.146-1.175 
+                 1.146H1.175C.526 16 0 15.487 0 
+                 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 
+                 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.341-1.248-.822 
+                 0-1.359.54-1.359 1.248 0 .694.521 1.248 
+                 1.326 1.248h.016zm4.908 8.212h2.4V9.359c0-.216.016-.432.08-.586.176-.431.577-.878 
+                 1.25-.878.882 0 1.235.662 1.235 1.634v3.865h2.401V9.25c0-2.22-1.184-3.251-2.763-3.251-1.273 
+                 0-1.845.7-2.165 1.193h.016v-1.025h-2.4c.03.662 0 7.225 0 
+                 7.225z"/>
+      </svg>
+    </a>
+  </div>
+</header>
 
          
 <section id="experiencia">
@@ -212,6 +224,7 @@
     <span class="pill"> Microsoft Power BI</span>
     <span class="pill"> ETL</span>
     <span class="pill"> Análise de Dados</span>
+    <span class="pill"> Estatítica Descritiva</span>
     <span class="pill"> Automação de Processos</span>
     <span class="pill"> Inglês Profissional</span>
   </div>
