--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <span class="pill"> Microsoft Power BI</span>
     <span class="pill"> ETL</span>
     <span class="pill"> Análise de Dados</span>
-    <span class="pill"> Estatítica Descritiva</span>
+    <span class="pill"> Estatística Descritiva</span>
     <span class="pill"> Automação de Processos</span>
     <span class="pill"> Inglês Profissional</span>
   </div>
