--- a/index.html
+++ b/index.html
@@ -132,8 +132,14 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="name"> Erick Heidan</div>
-      <div class="role"> Data Analyst • São Paulo, Brasil</div>
+      <h1>Erick Heidan</h1>
+      <p>Analista de Dados | Business Intelligence | Power BI | SQL | ETL | Transformação de Dados em Ideias</p>
+      <div class="contact">
+        <a href="https://www.linkedin.com/in/erickheidan/" target="_blank">LinkedIn</a>
+        <a href="https://erickheidan.github.io/" target="_blank">Portfólio</a>
+        <a href="mailto:erick@email.com">Email</a>
+      </div>
+    </header>
       <p class="lead"> Data Analyst com sólida experiência em Business Intelligence, automação de processos e criação de dashboards estratégicos. Bacharel em Ciências Sociais pela FESPSP, atuo na transformação de dados em insights que apoiam decisões de negócio.</p>
 
       <nav aria-label="Navegação">
