--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Erick Heidan</h1>
+        <div class="name">Erick Heidan</div>
+  <div class="role">Data Analyst • São Paulo, Brasil</div>
+  <p class="lead">
       <p>Analista de Dados | Business Intelligence | Power BI | SQL | ETL | Transformação de Dados em Ideias</p>
       <div class="contact">
         <a href="https://www.linkedin.com/in/erickheidan/" target="_blank">LinkedIn</a>
