--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
       <div class="actions">
         <a class="btn primary" href="mailto:erickheidan@gmail.com" aria-label="Enviar email">✉️ Email</a>
         <a class="btn" href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">LinkedIn</a>
-        <a class="btn" href="#" target="_blank" rel="noopener">Baixar CV (PDF)</a>
       </div>
     </header>
       
@@ -224,9 +223,10 @@
 <section id="habilidades">
   <h2>Habilidades</h2>
   <div class="card skills">
-    <span class="pill">Microsoft Power BI</span>
     <span class="pill">SQL</span>
-    <span class="pill">ETL</span>
+    <span class="pill">Microsoft Power BI</span>
+    <span class="pill">Estatística</span>
+    <span class="pill">Business Intelligence</span>
     <span class="pill">Análise de Dados</span>
     <span class="pill">Automação de Processos</span>
     <span class="pill">Inglês Profissional</span>
@@ -249,8 +249,7 @@
         <h2>Contato</h2>
         <div class="card">
           <p>Email: <a href="mailto:erickheidan@gmail.com">erickheidan@gmail.com</a></p>
-          <p>LinkedIn: <a href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">linkedin.com/in/seu-usuario</a></p>
-          <p>GitHub: <a href="https://github.com/erickheidan" target="_blank" rel="noopener">github.com/seuusuario</a></p>
+          <p>LinkedIn: <a href="https://www.linkedin.com/in/erickheidan" target="_blank" rel="noopener">linkedin.com/in/erickheidan</a></p>
         </div>
       </section>
     </main>
